<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackground"
    android:orientation="horizontal"
    tools:context=".activity.TargetActivity">


    <TextView
        android:id="@+id/tvTargetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/targetText"
        android:textColor="@color/targetText"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="77dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTargetReg"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="207dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:text="@string/targetButtonReg" />

        <Button
            android:id="@+id/btnTargetStartScreen"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="243dp"
            android:text="@string/targetButtonPrimaryScreen" />


    </LinearLayout>



</RelativeLayout>